--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <link href="/src/style.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+  <div class="container bg-[url(creepy.jpg)] bg-cover h=[100vh] w-screen"></div>
 </body>
 </html>
