--- a/index.html
+++ b/index.html
@@ -3,9 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link href="/src/style.css" rel="stylesheet">
 </head>
-<body>
-  <div class="container bg-[url(creepy.jpg)] bg-cover h=[100vh] w-screen"></div>
+<body class="m-0 p-0">
+  <div class="container-fluid bg-[url(../creepy.jpg)] bg-cover h-[100vh] w-screen flex">
+    <div class="wrapper flex h-full w-screen justify-center items-center">
+      <div class="content h-185 border-3 border-white rounded-xl flex">
+        <div class="leftNav rounded-xl w-50 bg-gradient-to-b from-red-600 to-orange-900 backdrop-opacity-50 h-full flex flex-col items-center justify-between">
+          <div class="logout flex flex-col items-center text-center pt-5">
+            <i class="fa-solid fa-circle-user text-white text-5xl"></i>
+            <p class="text-white text-xl">Chase Olson</p>
+          </div>
+            <ul class="List-none text-white text-lg flex flex-col gap-y-2">
+              <li><i class="fa-solid fa-house"></i>&nbsp;&nbsp;&nbsp;Home</li>
+              <li><i class="fa-solid fa-video"></i>&nbsp;&nbsp;&nbsp;Series</li>
+              <li><i class="fa-solid fa-heart"></i>&nbsp;&nbsp;&nbsp;Favorite</li>
+              <li><i class="fa-solid fa-gun"></i>&nbsp;&nbsp;&nbsp;Thriller</li>
+              <li><i class="fa-solid fa-ghost"></i>&nbsp;&nbsp;&nbsp;Horror</li>
+              <li><i class="fa-solid fa-gear"></i>&nbsp;&nbsp;&nbsp;Settings</li>
+            </ul>
+            <p class="text-lg text-white pb-5"><i class="fa-solid fa-right-from-bracket"></i>&nbsp;&nbsp;&nbsp;Log out</p>
+        </div>
+        <div class="rightNav flex flex-col items-center p-5 w-200 h-full bg-gradient-to-br from-rose-500/50  to-red-950/50">
+          <div class="dashHead flex justify-between items-center w-full">
+            <h2 class="p-5 text-2xl text-white">My Dashboard</h2>
+            <div class="icons flex gap-2">
+              <h1 class="bg-white rounded-2xl w-fit p-2"><i class="fa-solid fa-magnifying-glass"></i> Search<div class="w-50"></div></h1>
+              <i class="fa-solid fa-bell text-2xl text-white rounded-2xl w-fit p-2"></i>
+            </div>
+          </div>
+          <div class="mainImg bg-[url(../zombie.jpg)] w-170 aspect-[5/2] bg-cover bg-center rounded-4xl relative">
+            <div class="imgIcons flex gap-5 absolute bottom-3 left-3 p-5">
+              <i class="fa-solid fa-play text-white text-4xl"></i>
+              <i class="fa-solid fa-plus text-white text-4xl"></i>
+            </div>
+          </div>
+          <div class="tWrap w-full flex items-baseline p-7">
+            <h1 class="text-white text-2xl">More Like This</h1>
+          </div>
+          <div class="w-full imagesWrap flex justify-between">
+            <div class="bg-[url(../wolf.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
+            <div class="bg-[url(../night.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
+            <div class="bg-[url(../mountain.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
+            <div class="bg-[url(../candle.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
+            <div class="bg-[url(../zombie.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
