fiexed bottom images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="text-white text-xl">Chase Olson</p>
           </div>
             <ul class="List-none text-white text-lg flex flex-col gap-y-2">
-              <li class="hover:bg-white hover:text-rose-600 transition-[0.5s] p-3 w-full"><i class="fa-solid fa-house"></i>&nbsp;&nbsp;&nbsp;Home</li>
+              <li class="hover:bg-white hover:text-rose-600 transition-[0.5s] p-3"><i class="fa-solid fa-house"></i>&nbsp;&nbsp;&nbsp;Home</li>
               <li class="hover:bg-white hover:text-rose-600 transition-[0.5s] p-3"><i class="fa-solid fa-video"></i>&nbsp;&nbsp;&nbsp;Series</li>
               <li class="hover:bg-white hover:text-rose-600 transition-[0.5s] p-3"><i class="fa-solid fa-heart"></i>&nbsp;&nbsp;&nbsp;Favorite</li>
               <li class="hover:bg-white hover:text-rose-600 transition-[0.5s] p-3"><i class="fa-solid fa-gun"></i>&nbsp;&nbsp;&nbsp;Thriller</li>
@@ -46,8 +46,8 @@
             <div class="bg-[url(../wolf.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
             <div class="bg-[url(../night.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
             <div class="bg-[url(../mountain.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
-            <div class="bg-[url(../candle.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
-            <div class="bg-[url(../zombie.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
+            <div class="bg-[url(../candle.jpg)] w-35 aspect-[2/3] bg-cover bg-center rounded-4xl"></div>
+            <div class="bg-[url(../lights.jpg)] w-35 aspect-[2/3] bg-cover bg-center rounded-4xl"></div>
           </div>
         </main>
       </div>
