cleaned up my code

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body class="m-0 p-0">
   <div class="container-fluid bg-[url(../creepy.jpg)] bg-cover h-[100vh] w-screen flex">
     <div class="wrapper flex h-full w-screen justify-center items-center">
-      <div class="content h-185 border-3 border-white rounded-xl flex">
-        <nav class="leftNav rounded-xl w-50 bg-gradient-to-b from-red-600 to-orange-900 backdrop-opacity-50 h-full flex flex-col items-center justify-between">
+      <div class="content h-185 border-3 border-white rounded-xl flex bg-gradient-to-br from-rose-500/50  to-red-950/50">
+        <nav class="leftNav rounded-xl w-50 bg-gradient-to-b from-red-600 to-orange-900 h-full flex flex-col items-center justify-between">
           <div class="logout flex flex-col items-center text-center pt-5">
             <i class="fa-solid fa-circle-user text-white text-5xl"></i>
             <p class="text-white text-xl">Chase Olson</p>
@@ -25,7 +25,7 @@
             </ul>
             <p class="text-lg text-white pb-5"><i class="fa-solid fa-right-from-bracket"></i>&nbsp;&nbsp;&nbsp;Log out</p>
           </nav>
-        <main class="rightNav flex flex-col items-center p-5 w-200 h-full bg-gradient-to-br from-rose-500/50  to-red-950/50">
+        <main class="rightNav flex flex-col items-center p-5 w-200 h-full">
           <header class="dashHead flex justify-between items-center w-full">
             <h2 class="p-5 text-2xl text-white">My Dashboard</h2>
             <div class="icons flex gap-2">
