added some details to my code

--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
               <li class="hover:bg-white hover:text-rose-600 transition-[0.5s] p-3"><i class="fa-solid fa-ghost"></i>&nbsp;&nbsp;&nbsp;Horror</li>
               <li class="hover:bg-white hover:text-rose-600 transition-[0.5s] p-3"><i class="fa-solid fa-gear"></i>&nbsp;&nbsp;&nbsp;Settings</li>
             </ul>
-            <p class="text-lg text-white pb-5"><i class="fa-solid fa-right-from-bracket"></i>&nbsp;&nbsp;&nbsp;Log out</p>
+            <p class="text-lg text-white pb-5 hover:underline transition-[1s]"><i class="fa-solid fa-right-from-bracket"></i>&nbsp;&nbsp;&nbsp;Log out</p>
           </nav>
         <main class="rightNav flex flex-col items-center p-5 w-200 h-full">
           <header class="dashHead flex justify-between items-center w-full">
             <h2 class="p-5 text-2xl text-white">My Dashboard</h2>
             <div class="icons flex gap-2">
               <h1 class="bg-white rounded-2xl w-fit p-2"><i class="fa-solid fa-magnifying-glass"></i> Search<div class="w-50"></div></h1>
-              <i class="fa-solid fa-bell text-2xl text-white rounded-2xl w-fit p-2"></i>
+              <i class="fa-solid fa-bell text-2xl text-white rounded-2xl w-fit p-2 hover:text-rose-500 transition-[1s]"></i>
             </div>
           </header>
-          <div class="mainImg bg-[url(../zombie.jpg)] w-170 aspect-[5/2] bg-cover bg-center rounded-4xl relative">
+          <div class="mainImg bg-[url(../zombie.jpg)] w-170 aspect-[5/2] bg-cover bg-center rounded-4xl relative hover:rounded-none transition-[1s]">
             <div class="imgIcons flex gap-5 absolute bottom-3 left-3 p-5">
-              <i class="fa-solid fa-play text-white text-4xl"></i>
-              <i class="fa-solid fa-plus text-white text-4xl"></i>
+              <i class="fa-solid fa-play text-white text-4xl hover:text-rose-500 transition-[1s]"></i>
+              <i class="fa-solid fa-plus text-white text-4xl hover:text-rose-500 transition-[1s]"></i>
             </div>
           </div>
-          <div class="tWrap w-full flex items-baseline p-7">
+          <div class="tWrap w-full flex items-baseline pb-3 pt-9">
             <h1 class="text-white text-2xl">More Like This</h1>
           </div>
           <div class="w-full imagesWrap flex justify-between">
-            <div class="bg-[url(../wolf.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
-            <div class="bg-[url(../night.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
-            <div class="bg-[url(../mountain.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl"></div>
-            <div class="bg-[url(../candle.jpg)] w-35 aspect-[2/3] bg-cover bg-center rounded-4xl"></div>
-            <div class="bg-[url(../lights.jpg)] w-35 aspect-[2/3] bg-cover bg-center rounded-4xl"></div>
+            <div class="bg-[url(../wolf.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl hover:rounded-none transition-[1s]"></div>
+            <div class="bg-[url(../night.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl hover:rounded-none transition-[1s]"></div>
+            <div class="bg-[url(../mountain.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl hover:rounded-none transition-[1s]"></div>
+            <div class="bg-[url(../candle.jpg)] w-35 aspect-[2/3] bg-cover bg-center rounded-4xl hover:rounded-none transition-[1s]"></div>
+            <div class="bg-[url(../lights.jpg)] w-35 aspect-[2/3] bg-cover bg-center rounded-4xl hover:rounded-none transition-[1s]"></div>
           </div>
         </main>
       </div>
