--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link href="/src/style.css" rel="stylesheet">
-</head>
-<body class="m-0 p-0">
-  <div class="container-fluid bg-[url(../creepy.jpg)] bg-cover h-[100vh] w-screen flex">
-    <div class="wrapper flex h-full w-screen justify-center items-center">
-      <div class="content h-185 border-3 border-white rounded-xl flex bg-gradient-to-br from-rose-500/50  to-red-950/50">
-        <nav class="leftNav rounded-xl w-50 bg-gradient-to-b from-red-600 to-orange-900 h-full flex flex-col items-center justify-between">
-          <div class="logout flex flex-col items-center text-center pt-5">
-            <i class="fa-solid fa-circle-user text-white text-5xl"></i>
-            <p class="text-white text-xl">Chase Olson</p>
-          </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href="/src/style.css" rel="stylesheet">
+  </head>
+  <body class="m-0 p-0">
+    <div class="container-fluid bg-[url(../creepy.jpg)] bg-cover h-[100vh] w-screen flex">
+      <div class="wrapper flex h-full w-screen justify-center items-center">
+        <div class="content h-185 border-3 border-white rounded-xl flex bg-gradient-to-br from-rose-500/50  to-red-950/50">
+          <nav class="leftNav rounded-xl w-50 bg-gradient-to-b from-red-600 to-orange-900 h-full flex flex-col items-center justify-between">
+            <div class="logout flex flex-col items-center text-center pt-5">
+              <i class="fa-solid fa-circle-user text-white text-5xl"></i>
+              <p class="text-white text-xl">Chase Olson</p>
+            </div>
             <ul class="List-none text-white text-lg flex flex-col gap-y-2">
               <li class="hover:bg-white hover:text-rose-600 transition-[0.5s] p-3"><i class="fa-solid fa-house"></i>&nbsp;&nbsp;&nbsp;Home</li>
               <li class="hover:bg-white hover:text-rose-600 transition-[0.5s] p-3"><i class="fa-solid fa-video"></i>&nbsp;&nbsp;&nbsp;Series</li>
@@ -25,33 +25,33 @@
             </ul>
             <p class="text-lg text-white pb-5 hover:underline transition-[1s]"><i class="fa-solid fa-right-from-bracket"></i>&nbsp;&nbsp;&nbsp;Log out</p>
           </nav>
-        <main class="rightNav flex flex-col items-center p-5 w-200 h-full">
-          <header class="dashHead flex justify-between items-center w-full">
-            <h2 class="p-5 text-2xl text-white">My Dashboard</h2>
-            <div class="icons flex gap-2">
-              <h1 class="bg-white rounded-2xl w-fit p-2"><i class="fa-solid fa-magnifying-glass"></i> Search<div class="w-50"></div></h1>
-              <i class="fa-solid fa-bell text-2xl text-white rounded-2xl w-fit p-2 hover:text-rose-500 transition-[1s]"></i>
+          <main class="rightNav flex flex-col items-center p-5 w-200 h-full">
+            <header class="dashHead flex justify-between items-center w-full">
+              <h2 class="p-5 text-2xl text-white">My Dashboard</h2>
+              <div class="icons flex gap-2">
+                <h1 class="bg-white rounded-2xl w-fit p-2"><i class="fa-solid fa-magnifying-glass"></i> Search<div class="w-50"></div></h1>
+                <i class="fa-solid fa-bell text-2xl text-white rounded-2xl w-fit p-2 hover:text-rose-500 transition-[1s]"></i>
+              </div>
+            </header>
+            <div class="mainImg bg-[url(../zombie.jpg)] w-170 aspect-[5/2] bg-cover bg-center rounded-4xl relative hover:rounded-none transition-[1s]">
+              <div class="imgIcons flex gap-5 absolute bottom-3 left-3 p-5">
+                <i class="fa-solid fa-play text-white text-4xl hover:text-rose-500 transition-[1s]"></i>
+                <i class="fa-solid fa-plus text-white text-4xl hover:text-rose-500 transition-[1s]"></i>
+              </div>
             </div>
-          </header>
-          <div class="mainImg bg-[url(../zombie.jpg)] w-170 aspect-[5/2] bg-cover bg-center rounded-4xl relative hover:rounded-none transition-[1s]">
-            <div class="imgIcons flex gap-5 absolute bottom-3 left-3 p-5">
-              <i class="fa-solid fa-play text-white text-4xl hover:text-rose-500 transition-[1s]"></i>
-              <i class="fa-solid fa-plus text-white text-4xl hover:text-rose-500 transition-[1s]"></i>
+            <div class="tWrap w-full flex items-baseline pb-3 pt-9 px-5">
+              <h1 class="text-white text-2xl">More Like This</h1>
             </div>
-          </div>
-          <div class="tWrap w-full flex items-baseline pb-3 pt-9">
-            <h1 class="text-white text-2xl">More Like This</h1>
-          </div>
-          <div class="w-full imagesWrap flex justify-between">
-            <div class="bg-[url(../wolf.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl hover:rounded-none transition-[1s]"></div>
-            <div class="bg-[url(../night.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl hover:rounded-none transition-[1s]"></div>
-            <div class="bg-[url(../mountain.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl hover:rounded-none transition-[1s]"></div>
-            <div class="bg-[url(../candle.jpg)] w-35 aspect-[2/3] bg-cover bg-center rounded-4xl hover:rounded-none transition-[1s]"></div>
-            <div class="bg-[url(../lights.jpg)] w-35 aspect-[2/3] bg-cover bg-center rounded-4xl hover:rounded-none transition-[1s]"></div>
-          </div>
-        </main>
+            <div class="w-full imagesWrap flex justify-between">
+              <div class="bg-[url(../wolf.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl hover:rounded-none transition-[1s]"></div>
+              <div class="bg-[url(../night.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl hover:rounded-none transition-[1s]"></div>
+              <div class="bg-[url(../mountain.jpg)] w-35 aspect-[2/3] bg-cover rounded-4xl hover:rounded-none transition-[1s]"></div>
+              <div class="bg-[url(../candle.jpg)] w-35 aspect-[2/3] bg-cover bg-center rounded-4xl hover:rounded-none transition-[1s]"></div>
+              <div class="bg-[url(../lights.jpg)] w-35 aspect-[2/3] bg-cover bg-center rounded-4xl hover:rounded-none transition-[1s]"></div>
+            </div>
+          </main>
+        </div>
       </div>
     </div>
-  </div>
-</body>
-</html>
+  </body>
+  </html>
